--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "@fontsource/outfit": "^5.1.1",
     "@next/font": "^14.2.15",
     "@react-three/drei": "^9.121.4",
-    "@react-three/fiber": "^9.0.0-alpha.8",
+    "@react-three/fiber": "^8.17.14",
     "clsx": "^2.1.1",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.4.2",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
+    "react-lottie": "^1.2.10",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.173.0",
@@ -31,6 +32,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-lottie": "^1.2.10",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
